<resources>
    <string name="app_name">Binge</string>
    <string name="hello_blank_fragment">Fuck Off</string>
    <string name="fetching_data_please_wait">Fetching Movies. Please Wait.</string>
    <string name="rating">Rating:</string>
    <string name="directors">Directors:</string>
    <string name="starring">Starring:</string>
    <string name="genre">Genre:</string>
    <string name="open_imdb">Open IMDB</string>
    <string name="action_sort_by">Sort by</string>
    <string name="change_theme">Change Theme</string>
    <string name="theme_shared_preference">theme_file_name</string>
    <string name="dark_theme_enabled_key">is_dark_theme_enabled</string>
    <string name="last_synced_key">time last synced</string>
    <string name="dark_theme_shared_preference">dark_theme?</string>
    <string name="year">Year:</string>
    <string name="alphabets_menu_item">Name</string>
    <string name="rating_menu_item">Rating</string>
    <string name="year_menu_item">Year</string>
</resources>